apps/shop/checkout/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-checkout-dev
spec:
  host: shop-checkout.shop-checkout.svc.cluster.local
  subsets:
  - name: shop-checkout-dev
    labels:
      app: shop-checkout
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-checkout-dev-d1a
    labels:
      app: shop-checkout
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
