apps/shop/checkout/k8s/overlays/non-prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shop-checkout-dev
spec:
  hosts:
  - shop-checkout
  http:
  - match:
    - sourceLabels:
        app: shop-checkout
        env: dev
    route:
    - destination:
        host: shop-checkout
        subset: shop-checkout-dev
